# colorbrewer-python

./: pyproject.toml  setup.py
colorbrewer/: __init__.py  colors.py
